Commit listo para subir y entregar eventos.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
         <!-- Aside -->
         <aside id="aside">
 
-            <!-- Agregar Nombre -->
-            <input id="agregaNombre" placeholder="Agregue su nombre">
+            <form id="form-nombreSaldo">
+                <!-- Agregar Nombre -->
+                <input id="agregaNombre" placeholder="Agregue su nombre">
 
-            <!-- Agregar crédito -->
-            <input id="agregaSaldo" placeholder="Agregue crédito disponible">
-            <!-- Hacer que vaya devolviendo los creditos disponibles conforme se agregan al carrito. -->
-            <button class="btn-accion btn-nombreSaldo" type="submit" id="btn-nombreSaldo">Aplicar</button>
+                <!-- Agregar crédito -->
+                <input id="agregaSaldo" placeholder="Agregue crédito disponible">
+                
+                <button class="btn-accion btn-nombreSaldo" type="submit" id="btn-nombreSaldo">Aplicar</button>
+            </form>
 
             <!-- BUSCAR POR NOMBRE -->
             <input id="buscaXNombre" placeholder="Buscar por nombre">
@@ -107,3 +109,5 @@
     <script src="javaScript.js"></script>
 </body>
 </html>
+
+
